<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasarDatos</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="anadir">Añadir</string>
    <string name="editar">Editar</string>
    <string name="ok">OK</string>
    <string name="mostrar">Mostrar Lista</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_actividad2">Actividad2</string>
    <string name="title_activity_mostrar_lista">MostrarLista</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_borrar">ActivityBorrar</string>
    <string name="borrar">Elige el contacto a borrar</string>

</resources>
