<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/tvNombreO" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/etNombreO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:id="@+id/tvTelO" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/etTelO" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btnOk" />
</LinearLayout>